--- a/assets/css/contains.css
+++ b/assets/css/contains.css
@@ -1,91 +1,93 @@
 body {
+  display: flex;
+  justify-content: center;
+
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.ui-parent {
-  display: flex;
-  justify-content: center;
-  flex-wrap: nowrap;
-  flex-direction: row;
-}
-
-
-.ui-left {
-  width: 300px;
-  height: 100vh;
-
-  padding-top: 50px;
-}
-
-.ui-left-page {
-  background-color: lightskyblue;
-
-  height: 50px;
-  width: calc(100% -10px);
-  margin: 5px 10px 5px 0;
-
-  border-radius: 25px;
-  box-sizing:border-box;
-
-  padding: 5px;
-  font-size: 30px;
-}
-
-.ui-left-page {
-  background-color: lightskyblue;
-
-  height: 50px;
-  width: calc(100% -10px);
-  margin: 5px 10px 5px 0;
-
-  border-radius: 25px;
-  box-sizing:border-box;
-
-  padding: 5px;
-  font-size: 30px;
-}
-
-.ui-main {
-  width: 600px;
-  height: 100vh;
-
-  border-width: 0 3px;
-  border-color: lightgray;
-  border-style: solid;
-}
-
-.ui-main-header {
+.flame {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
 
-  height: 50px;
-  width: 100%;
+  height: 100vh;
+  width: 800px;
 
-  border-width: 0 0 4px 0;
-  border-color: lightgray;
-  border-style: solid;
-
-  text-align: center;
-  font-size: 20px;
+  border-width: 5px;
+  border-color: lightskyblue;
+  border-style: double;
+  box-sizing: border-box;
 }
 
-.ui-main-header-tab {
+.flame>div {
   height: 100%;
+
+  border-width: 5px;
+  border-color: aliceblue;
+  border-style: solid;
+  box-sizing: border-box;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+
+  width: 40%;
+}
+
+.content-box {
+  min-height: 50px;
+  width: 90%;
+
+  background-color: lightblue;
+
+  margin: 5px;
+  padding: 10px 0;
+}
+
+.left-content {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-content-in {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  width: 60%;
+}
+
+.head {
+  height: 40px;
   width: 100%;
+
+  border-width: 0 0 5px 0;
+  border-color: aqua;
+  border-style: solid;
+
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
 }
 
-.ui-main-header-tab.select-tab {
-  background-color: #f0f0f0;
+.search-box {
+  width: calc(100% - 30px);
 }
+.note-box {
+  width: 100%;
+  height: 5lh;
 
-.ui-main-header-tab:hover {
-  background-color: lightgray;
+  resize: none;
 }
-
-.ui-right {
-  width: 300px;
-  height: 100vh;
-}
-
