--- a/assets/css/contains.css
+++ b/assets/css/contains.css
@@ -39,32 +39,6 @@ body {
   width: 40%;
 }
 
-.content-box {
-  min-height: 50px;
-  width: 90%;
-
-  background-color: lightblue;
-
-  margin: 5px;
-  padding: 10px 0;
-}
-
-.left-content {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.left-content-in {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .right {
   width: 60%;
 }
@@ -82,12 +56,41 @@ body {
   text-align: center;
 }
 
-.search-box {
-  width: calc(100% - 30px);
+.action {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+
+  width: 90%;
+  min-height: 50px;
+
+  border-radius: 25px;
+  background-color: lightblue;
+
+  margin: 5px 0;
 }
-.note-box {
+
+.search-box {
+  width: 70%;
+}
+
+.note-area {
+  margin: 20px;
+}
+
+.note-text {
   width: 100%;
   height: 5lh;
 
   resize: none;
+}
+
+.note-attachment {
+  background-color: gray;
+}
+
+.note-preview {
+  height: 80px;
 }
